@@ -150,6 +150,7 @@ def build(bld):
         'model/tcp-vegas.cc',
         'model/tcp-congestion-ops.cc',
         'model/tcp-westwood.cc',
+        'model/tcp-scalable.cc', 
         'model/tcp-rx-buffer.cc',
         'model/tcp-tx-buffer.cc',
         'model/tcp-option.cc',
@@ -250,6 +251,7 @@ def build(bld):
         'test/tcp-highspeed-test.cc',
         'test/tcp-hybla-test.cc',
         'test/tcp-vegas-test.cc',
+        'test/tcp-scalable-test.cc',
         'test/tcp-zero-window-test.cc',
         'test/tcp-pkts-acked-test.cc',
         'test/tcp-rtt-estimation.cc',
@@ -355,6 +357,7 @@ def build(bld):
         'model/tcp-vegas.h',
         'model/tcp-congestion-ops.h',
         'model/tcp-westwood.h',
+        'model/tcp-scalable.h',
         'model/tcp-socket-base.h',
         'model/tcp-tx-buffer.h',
         'model/tcp-rx-buffer.h',
